kubernetes/manifests/20-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudlab-backend
  namespace: cloudlab
  labels:
    app.kubernetes.io/name: cloudlab-backend
    app.kubernetes.io/part-of: cloudlab
    app.kubernetes.io/component: api
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: cloudlab-backend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: cloudlab-backend
        app.kubernetes.io/part-of: cloudlab
        app.kubernetes.io/component: api
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 10001
        runAsGroup: 10001
        fsGroup: 10001
      containers:
        - name: backend
          image: cloudlab-backend:local
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: http
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 6
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: http
            initialDelaySeconds: 40
            periodSeconds: 15
            timeoutSeconds: 5
            failureThreshold: 3
          resources:
            requests:
              cpu: 100m
              memory: 384Mi
            limits:
              cpu: "1"
              memory: 768Mi
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
            capabilities:
              drop: ["ALL"]
---
apiVersion: v1
kind: Service
metadata:
  name: cloudlab-backend
  namespace: cloudlab
  labels:
    app.kubernetes.io/name: cloudlab-backend
    app.kubernetes.io/part-of: cloudlab
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: cloudlab-backend
  ports:
    - name: http
      port: 8080
      targetPort: http
